[gd_scene load_steps=2 format=3 uid="uid://b8t5j6xg86kwp"]

[ext_resource type="Script" path="res://run_system/ui/starter_deck_builder.gd" id="1_a0b2c"]

[node name="StarterDeckBuilder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0b2c")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.156863, 0.188235, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Construct Starter Deck"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelPool" type="Panel" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelPool"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelPool/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Available Cards"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/PanelPool/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PoolGrid" type="GridContainer" parent="VBoxContainer/HBoxContainer/PanelPool/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="PanelDeck" type="Panel" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelDeck"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelDeck/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Current Deck"
horizontal_alignment = 1

[node name="CountLabel" type="Label" parent="VBoxContainer/HBoxContainer/PanelDeck/VBoxContainer"]
layout_mode = 2
text = "Selected: 0/10"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/PanelDeck/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DeckGrid" type="GridContainer" parent="VBoxContainer/HBoxContainer/PanelDeck/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 20

[node name="StartButton" type="Button" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "START RUN"
